[package]
name = "blueshim"
description = "An open source iMessage implementation"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
log = "0.4.20"
plist = "1.6.0"
rsa = { version = "0.9.6", features = ["hazmat"] }
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.193", features = ["derive"] }
#unicorn-engine = "2.0.1"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
x509-cert = { version = "0.2.4", features = ["builder", "hazmat"] }

[workspace]
members = ["blueshim_ffi"]
