[package]
name = "blueshim"
description = "An open source iMessage implementation"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
log = "0.4.20"
pbkdf2 = { version = "0.12.2", features = ["sha1", "sha2"] }
pem-rfc7468 = "0.7.0"
plist = "1.6.0"
rand_core = { version = "0.6.4", features = ["alloc", "std"] }
rsa = { version = "0.9.6", features = ["sha2", "sha1"] }
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.193", features = ["derive"] }
sha1 = { version = "0.10.6", features = ["asm"] }
signature = { version = "2.2.0", features = ["digest", "derive"] }
srp = "0.6.0"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros", "net", "io-std", "io-util"] }
tokio-rustls = "0.25.0"
ureq = { version = "2.9.1", features = ["gzip", "tls", "json"] }
#unicorn-engine = "2.0.1"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
x509-cert = { version = "0.2.4", features = ["builder", "sha1"] }

[workspace]
members = ["blueshim_ffi"]
